# owlclip

./: .gitignore  readme.md
owlclip_backend_new/: .dockerignore  Dockerfile  compose.yaml  pyproject.toml  requirements.txt  test_candidate_strategies.py  transcripts.txt
owlclip_backend_new/app/: main.py
owlclip_backend_new/app/core/: config.py  database.py  security.py  storage.py  styles.py  validators.py
owlclip_backend_new/app/db/: deps.py
owlclip_backend_new/app/middleware/: auth.py  ratelimiter.py
owlclip_backend_new/app/models/: CreditTransaction.py  Payment.py  UploadJob.py  User.py
owlclip_backend_new/app/repositories/: dashboard.py  payments.py  upload_jobs.py  users.py
owlclip_backend_new/app/routers/v1/: __init__.py  auth.py  dashboard.py  payments.py  profile.py  subtitle.py  upload.py
owlclip_backend_new/app/schemas/: auth.py  errors.py  payments.py  subtitle.py  upload.py
owlclip_backend_new/app/services/: auth.py  ingestion.py  job_service.py  queue_service.py  worker.py
owlclip_backend_new/app/services/media/: clipping.py  extract_audio.py
owlclip_backend_new/app/services/subtitles/: ass_generation.py  process_clip.py  processing.py  video_utils.py
owlclip_backend_new/app/utils/: AppError.py  clip_download.py  constants.py  razorpay.py
owlclip_backend_new/docs/: CANDIDATE_SELECTION_STRATEGIES.md  payment_integration.md  things_happen.md  track.md
owlclip_backend_new/docs/api/: apis.md
owlclip_backend_new/docs/deployment/: vm_files.md
owlclip_backend_new/docs/services/: ingetion.md
owlclip_frontend/: Dockerfile  proxy.ts  (+3 more)
(+67 files in other folders)
