[project]
name = "owlclip-backend-new"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "azure-cognitiveservices-speech>=1.50.0",
    "azure-storage-blob>=12.29.0",
    "azure-storage-queue>=12.16.0",
    "bcrypt>=5.0.0",
    "cryptography>=48.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.136.3",
    "ffmpeg-python>=0.2.0",
    "httpx>=0.28.1",
    "librosa>=0.11.0",
    "onnxruntime>=1.26.0",
    "pydantic-settings>=2.14.1",
    "pysubs2>=1.8.1",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "razorpay>=2.0.1",
    "silero-vad>=6.2.1",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.50",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "uvicorn>=0.48.0",
    "yt-dlp>=2026.3.17",
]



[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }
    